cabal-version:      2.4
name:               vimHelpGen
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Trouble-Truffle
maintainer:         perigordtruffle7318@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable vimHelpGen
    main-is:          Main.hs

    other-modules:    Markdown
                      VimHelpSyntax

    exposed-modules:  Main

    build-depends:    base ^>=4.15.1.0
                    , cmark-gfm >= 0.2.3
                    , containers >= 0.6
                    , mtl >= 2.2.2
                    , lens >= 5.1.1
                    , text >= 1.2
                    , terminal-size >= 0.3
                    , directory >= 1.3.6
                    , filepath >= 1.4

    hs-source-dirs:   src
    default-language: Haskell2010
